add use cases for enrollment