@@ -5,7 +5,9 @@ import org.junit.jupiter.api.Test;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -14,16 +16,16 @@ class CourseRunTest {
     // maxParticipants validation tests
     @Test
     void shouldCreateCourseRunWithValidMaxParticipants() {
-        assertDoesNotThrow(() -> new CourseRun(1, new ArrayList<>()));
-        assertDoesNotThrow(() -> new CourseRun(10, new ArrayList<>()));
-        assertDoesNotThrow(() -> new CourseRun(100, new ArrayList<>()));
+        assertDoesNotThrow(() -> new CourseRun(UUID.randomUUID(), 1, new ArrayList<>(), Collections.emptyList()));
+        assertDoesNotThrow(() -> new CourseRun(UUID.randomUUID(), 10, new ArrayList<>(), Collections.emptyList()));
+        assertDoesNotThrow(() -> new CourseRun(UUID.randomUUID(), 100, new ArrayList<>(), Collections.emptyList()));
     }
 
     @Test
     void shouldThrowExceptionWhenMaxParticipantsIsZero() {
         ApplicationException exception = assertThrows(
                 ApplicationException.class,
-                () -> new CourseRun(0, new ArrayList<>())
+                () -> new CourseRun(UUID.randomUUID(), 0, new ArrayList<>(), Collections.emptyList())
         );
         assertEquals("CourseRun maxParticipants must be at least 1", exception.getMessage());
     }
@@ -32,7 +34,7 @@ class CourseRunTest {
     void shouldThrowExceptionWhenMaxParticipantsIsNegative() {
         ApplicationException exception = assertThrows(
                 ApplicationException.class,
-                () -> new CourseRun(-1, new ArrayList<>())
+                () -> new CourseRun(UUID.randomUUID(), -1, new ArrayList<>(), Collections.emptyList())
         );
         assertEquals("CourseRun maxParticipants must be at least 1", exception.getMessage());
     }
@@ -41,7 +43,7 @@ class CourseRunTest {
     void shouldThrowExceptionWhenMaxParticipantsIsLargeNegative() {
         ApplicationException exception = assertThrows(
                 ApplicationException.class,
-                () -> new CourseRun(-100, new ArrayList<>())
+                () -> new CourseRun(UUID.randomUUID(), -100, new ArrayList<>(), Collections.emptyList())
         );
         assertEquals("CourseRun maxParticipants must be at least 1", exception.getMessage());
     }
@@ -51,14 +53,14 @@ class CourseRunTest {
     void shouldThrowExceptionWhenLessonsIsNull() {
         ApplicationException exception = assertThrows(
                 ApplicationException.class,
-                () -> new CourseRun(10, null)
+                () -> new CourseRun(UUID.randomUUID(), 10, null, Collections.emptyList())
         );
         assertEquals("CourseRun lessons must not be null", exception.getMessage());
     }
 
     @Test
     void shouldCreateCourseRunWithEmptyLessonsList() {
-        assertDoesNotThrow(() -> new CourseRun(10, new ArrayList<>()));
+        assertDoesNotThrow(() -> new CourseRun(UUID.randomUUID(), 10, new ArrayList<>(), Collections.emptyList()));
     }
 
     @Test
@@ -70,7 +72,7 @@ class CourseRunTest {
         List<Lesson> lessons = List.of(lesson);
 
         // When & Then
-        assertDoesNotThrow(() -> new CourseRun(20, lessons));
+        assertDoesNotThrow(() -> new CourseRun(UUID.randomUUID(), 20, lessons, Collections.emptyList()));
     }
 
     @Test
@@ -86,13 +88,13 @@ class CourseRunTest {
         List<Lesson> lessons = List.of(lesson1, lesson2);
 
         // When & Then
-        assertDoesNotThrow(() -> new CourseRun(15, lessons));
+        assertDoesNotThrow(() -> new CourseRun(UUID.randomUUID(), 15, lessons, Collections.emptyList()));
     }
 
     // startTime() method tests
     @Test
     void shouldReturnNullWhenNoLessons() {
-        CourseRun courseRun = new CourseRun(10, List.of());
+        CourseRun courseRun = new CourseRun(UUID.randomUUID(), 10, List.of(), Collections.emptyList());
 
         assertNull(courseRun.startTime());
     }
@@ -102,7 +104,7 @@ class CourseRunTest {
         LocalDateTime start = LocalDateTime.of(2026, 3, 1, 9, 0);
         LocalDateTime end = LocalDateTime.of(2026, 3, 1, 12, 0);
         Lesson lesson = new Lesson("Java Basics", start, end);
-        CourseRun courseRun = new CourseRun(10, List.of(lesson));
+        CourseRun courseRun = new CourseRun(UUID.randomUUID(), 10, List.of(lesson), Collections.emptyList());
 
         assertEquals(start, courseRun.startTime());
     }
@@ -120,7 +122,7 @@ class CourseRunTest {
         Lesson lesson2 = new Lesson("Introduction", start2, end2);
         Lesson lesson3 = new Lesson("Conclusion", start3, end3);
 
-        CourseRun courseRun = new CourseRun(15, List.of(lesson1, lesson2, lesson3));
+        CourseRun courseRun = new CourseRun(UUID.randomUUID(), 15, List.of(lesson1, lesson2, lesson3), Collections.emptyList());
 
         assertEquals(start2, courseRun.startTime());
     }
@@ -139,9 +141,9 @@ class CourseRunTest {
         Lesson lesson3 = new Lesson("Day 3", start3, end3);
 
         // Test with different list orders
-        CourseRun courseRun1 = new CourseRun(10, List.of(lesson1, lesson2, lesson3));
-        CourseRun courseRun2 = new CourseRun(10, List.of(lesson3, lesson1, lesson2));
-        CourseRun courseRun3 = new CourseRun(10, List.of(lesson2, lesson3, lesson1));
+        CourseRun courseRun1 = new CourseRun(UUID.randomUUID(), 10, List.of(lesson1, lesson2, lesson3), Collections.emptyList());
+        CourseRun courseRun2 = new CourseRun(UUID.randomUUID(), 10, List.of(lesson3, lesson1, lesson2), Collections.emptyList());
+        CourseRun courseRun3 = new CourseRun(UUID.randomUUID(), 10, List.of(lesson2, lesson3, lesson1), Collections.emptyList());
 
         assertEquals(start2, courseRun1.startTime());
         assertEquals(start2, courseRun2.startTime());
